# finance-chatbot

./: .gitignore  chainlit.md  chainlit_local.py  cron_task.py  ecosystem.config.js  main.py  pyproject.toml  tasks_local.py
.chainlit/: config.toml
.github/workflows/: main.yml
mcp-server/alpaca_agent/: alpaca_client.py  calls.py  models.py  server.py
mcp-server/google_news/: server.py
mcp-server/investor_agent/: server.py
mcp-server/news_agent/: server.py
mcp-server/yf_server/: server.py
models/: response.py
public/: base.css  base.js
tools/: calendar.py  economic_calendar.py  email.py  scheduler.py  time.py  watchlists.py
utils/: auth.py  cnn_fng_utils.py  graph.py  markdown_report.py  prompt.py  query_watchlist.py  scheduler.py  stock_analyzer.py  technical_indicator.py  yfinance_utils.py
