[project]
name = "finance-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpaca-py>=0.41.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "boto3>=1.39.1",
    "chainlit>=2.5.5",
    "googlenews>=1.6.15",
    "langchain-community>=0.3.26",
    "langchain-mcp-adapters>=0.1.7",
    "langchain[google-genai]>=0.3.26",
    "langgraph>=0.5.0",
    "lxml[html-clean]>=6.0.0",
    "matplotlib>=3.10.3",
    "mcp>=1.10.1",
    "newsapi-python>=0.2.7",
    "newspaper3k>=0.2.8",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "ta-lib>=0.6.4",
    "tabulate>=0.9.0",
    "yfinance>=0.2.64",
]
