[project]
name = "finance-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alpaca-py>=0.42.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "boto3>=1.39.9",
    "chainlit>=2.6.2",
    "google-cloud-storage>=3.3.0",
    "langchain-google-genai>=2.1.8",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.32",
    "langchain[google-genai]>=0.3.26",
    "langgraph>=0.5.3",
    "lxml[html-clean]>=6.0.0",
    "markdown>=3.8.2",
    "newsapi-python>=0.2.7",
    "pytz>=2025.2",
    "scipy>=1.15.3",
    "ta-lib>=0.6.4",
    "tabulate>=0.9.0",
    "tzlocal>=5.3.1",
    "yfinance>=0.2.65",
]
